# Gur-Prime-1

./: export.py  lora.ipynb  pyproject.toml  qlora.ipynb
__marimo__/session/: lora.py.json
scripts/: build_sft_dataset.py  convert_insta_to_chatml.py
