[project]
name = "gurgpt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.13.0",
    "bitsandbytes>=0.49.2",
    "datasets>=4.3.0",
    "huggingface-hub>=1.18.0",
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "peft>=0.19.1",
    "torch>=2.10.0",
    "transformers>=5.5.0",
    "trl>=0.24.0",
    "unsloth>=2026.6.1",
    "wandb>=0.27.2",
]
